stage-03-kubernetes/manifests/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-app
  labels:
    app: devops-app
spec:
  replicas: 3  # Мы хотим 3 копии нашего приложения для отказоустойчивости
  selector:
    matchLabels:
      app: devops-app  # Этот деплоймент управляет подами с такой меткой
  template:
    metadata:
      labels:
        app: devops-app  # Метка, которую получат все созданные поды
    spec:
      containers:
        - name: app
          image: devops-app:v1  # Наш образ, который мы загрузили в kind!
          ports:
            - containerPort: 5000
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
