stage-03-kubernetes/manifests/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-app-service  # Имя, по которому другие сервисы будут его находить
spec:
  selector:
    app: devops-app  # Связываем этот сервис с подами, у которых есть эта метка
  ports:
    - protocol: TCP
      port: 80           # Порт, который открывает этот Service внутри кластера
      targetPort: 5000   # Порт, на котором реально слушает наш контейнер
  type: ClusterIP        # Доступен только внутри кластера (безопасно и правильно!)
