stage-03-kubernetes/manifests/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx  # Говорим, какой контроллер использовать
  rules:
    - host: devops-app.local  # Домен, по которому будем обращаться
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-app-service  # Куда направлять трафик
                port:
                  number: 80
